--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,11 +1,14 @@
-﻿v0.4.9 []
+﻿v1.0b [2013-06-16]
+* Added support for pure AAC streamings (AAC+V2 and FLV containers not supported yet).
+* Refactored liveConnectionChecking all codecs supported.
 * Fixed memory leak on OGG Streamings.
-* Added support for requesting metadata on icecast streaming with get parameters (tnx to Allmoz https://github.com/Allmoz)
+* Added support for requesting metadata on icecast streaming *with get parameters* (tnx to Allmoz https://github.com/Allmoz)
 * Fixed bug on MRP.js (functions like MRP.stop(), MRP.play() and MRP.setVolume(...) are working fine again)
 * Support for animated Skins (can use SWF instead of static images)
-* Added Labels to Flash Buttons to help blind or print-impaired users, some of whom use Screen Reader software (like JAWS).
+* Added Labels to Flash Buttons to help blind or print-impaired users using Screen Reader software (like JAWS).
 * Added fallbackUrl option to the javascript MRP.js code.
-* in progres...
+* Fixed documentation of musesCallback function.
+* Happy Father's Day!
 
 v0.4.8 [2013-04-06]
 * Added metadataproxy option to allow getting metadata on Mp3 streamings from servers
